tests/integration/snapshots/integration__schema_snapshots__response_schema_RecommendedActionTool.snap
---
source: tests/integration/schema_snapshots.rs
expression: schema
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "RecommendedActionTool",
  "description": "Tool name for a deterministic next action recommended by `brief`.",
  "oneOf": [
    {
      "description": "Read one full memory by ID.",
      "type": "string",
      "const": "read"
    },
    {
      "description": "Read multiple full memories by ID.",
      "type": "string",
      "const": "read_many"
    },
    {
      "description": "Run a focused recall search.",
      "type": "string",
      "const": "recall"
    },
    {
      "description": "Store a new durable memory.",
      "type": "string",
      "const": "remember"
    },
    {
      "description": "Resolve or browse governed contexts.",
      "type": "string",
      "const": "context_resolve"
    },
    {
      "description": "Create a governed context.",
      "type": "string",
      "const": "context_create"
    },
    {
      "description": "Register a missing scope definition.",
      "type": "string",
      "const": "admin_scope_register"
    }
  ]
}
